ui/media/css/main.css
/* ... */
#editor-inputs-tags-container {
    margin-top: 5pt;
    display: none;
}
#editor-inputs-tags-list {
    max-height: 30em;
}
#server-status {
    position: absolute;
    right: 16px;
    top: 4px;
    text-align: right;
}
#server-status-color {
    font-size: 14pt;
    color: var(--status-orange);
    display: inline;
}
#server-status-msg {
    color: var(--status-orange);
    padding-left: 2pt;
    font-size: 10pt;
}
.preview-prompt {
    font-size: 13pt;
    display: inline;
}
#coffeeButton {
    height: 23px;
    transform: translateY(25%);
}

#top-nav {
    position: relative;
    background: var(--background-color4);
    display: flex;
    padding: 6px 0 0;
}
.tab .icon {
    padding-right: 4pt;
    font-size: 14pt;
    transform: translateY(1pt);
}
#logo {
    display: inline;
    padding: 0 12px 12px;
    white-space: nowrap;
}
#logo h1 {
    display: inline;
}
#top-nav-items {
    list-style-type: none;
    display: inline;
    float: right;
}
#top-nav-items > li {
    float: left;
    display: inline;
    padding-left: 20pt;
}
#top-nav-items > li:first-child {
    cursor: default;
}
#initial-text {
    padding-top: 15pt;
    padding-left: 4pt;
}
.settings-subheader {
    font-size: 10pt;
    font-weight: bold;
}
.pl-5 {
    padding-left: 5pt;
}
#community-links {
    display: inline-block;
    list-style-type: none;
    text-align: left;
    margin: auto;
    padding: 0px;
}
#community-links li {
    padding-bottom: 12pt;
    display: block;
    font-size: 10pt;
}
#community-links li .fa-fw {
    padding-right: 2pt;
}
#community-links li a {
    color: var(--text-color);
    text-decoration: none;
}
.float-child h1 {
    border-bottom: var(--button-border);
}
#help-links {
    display: inline-block;
    list-style-type: none;
    text-align: left;
    margin: auto;
    padding: 0px;
}
#help-links ul {
    list-style-type: disc;
    padding-left: 12pt;
}
#help-links li {
    padding-bottom: 6pt;
    display: block;
    font-size: 10pt;
}
#help-links ul li {
    display: list-item;
}
#help-links li .fa-fw {
    padding-right: 2pt;
}
#help-links li a {
    color: var(--text-color);
    text-decoration: none;
}
#help-links li ul {
    padding-inline-start: 10px;
    margin-top: 8px;
}
.help-section {
    font-size: 130%;
}
.dropdown {
    overflow: hidden;
}
.dropdown-content {
    display: none;
    position: absolute;
    z-index: 2;
    border-radius: 7px;
    padding: 0px;
    margin-bottom: 15px;
    box-shadow: 0 20px 28px 0 rgba(0, 0, 0, 0.75), 0 6px 20px 0 rgba(0, 0, 0, 0.75);
}
.dropdown:hover .dropdown-content {
    display: block;
}
.dropdown:hover + .dropdown-content {
    display: block;
}
.dropdown-content:hover {
    display: block;
}

.gated-feature {
    display: none;
}

.warning-label {
    font-size: smaller;
    color: var(--status-orange);
}

.display-settings {
    float: right;
    position: relative;
}

.display-settings .dropdown-content {
    right: 0px;
    top: 12pt;
}

.dropdown-item {
    padding: 4px;
    background: var(--background-color1);
    border: 2px solid var(--background-color4);
}

.dropdown-item:first-child {
    border-radius: 7px 7px 0px 0px;
}

.dropdown-item:last-child {
    border-radius: 0px 0px 7px 7px;
}

.imageTaskContainer {
    border: 1px solid var(--background-color2);
    margin-bottom: 10pt;
    padding: 5pt;
    border-radius: 5pt;
    box-shadow: 0 20px 28px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
}
.imageTaskContainer > div > .collapsible-handle {
    display: none;
}
.dropTargetBefore::before{
    content: "";
    border: 1px solid #fff;
    margin-bottom: -2px;
    display: block;
    box-shadow: 0 0 5px #fff;
    transform: translate(0px, -14px);
}
.dropTargetAfter::after{
    content: "";
    border: 1px solid #fff;
    margin-bottom: -2px;
    display: block;
    box-shadow: 0 0 5px #fff;
    transform: translate(0px, 14px);
}
.drag-handle {
    margin-right: 6px;
    cursor: move;
}
.taskStatusLabel {
    font-size: 8pt;
    background:var(--background-color2);
    border: 1px solid rgb(61, 62, 66);
    padding: 2pt 4pt;
    border-radius: 2pt;
    margin-right: 5pt;
    display: inline;
}
.activeTaskLabel {
    background:rgb(0, 90, 30);
    border: 1px solid rgb(0, 75, 19);
    color:rgb(222, 253, 230)
}
.waitingTaskLabel {
    background:rgb(128, 89, 0);
    border: 1px solid rgb(107, 75, 0);
    color:rgb(255, 242, 211)
}
.primaryButton {
    flex: 0 0 70px;
    background: var(--accent-color);
    border: var(--primary-button-border);
    color: rgb(255, 221, 255);
    padding: 3pt 6pt;
}
.secondaryButton {
    background: var(--secondary-button-background);
    border: 1px solid rgb(122, 29, 0);
    color: rgb(255, 221, 255);
    padding: 3pt 6pt;
    border-radius: 5px;
}
.secondaryButton:hover {
    background: var(--secondary-button-hover-background);
}
.tertiaryButton {
    background: var(--tertiary-background-color);
    color: var(--tertiary-color);
    border: 1px solid var(--tertiary-border-color);
    padding: 3pt 6pt;
    border-radius: 5px;
}
.tertiaryButton:hover {
    background: var(--button-hover-background);
    color: var(--accent-text-color);
}
.tertiaryButton.pressed {
    border-style: inset;
    background: var(--button-hover-background);
    color: var(--accent-text-color);
}
.useSettings {
    margin-right: 6pt;
    float: right;
}
.stopTask {
    float: right;
}
#preview-tools {
    padding: 4pt;
}
#preview-tools .display-settings .dropdown-content {
    right: -6px;
    top: 20px;
    box-shadow: none;
    width: max-content;
}
.taskConfig {
    font-size: 10pt;
    color: #aaa;
    margin-bottom: 5pt;
    margin-top: 5pt;
}

.taskConfigContainer {
    display: inline;
}

.img-batch {
    display: inline;
}
#prompt_from_file {
    display: none;
}

#init_image_preview_container {
    display: flex;
    margin-top: 6px;
    margin-bottom: 8px;
}
/* ... */

